# fastapi-msa-test

./: README.md  docker-compose.yml  pyproject.toml
gateway/: dockerfile
gateway/app/: gateway.py
order-service/: dockerfile
order-service/app/: order_service.py
user-service/: dockerfile
user-service/app/: user_service.py
