[tool.poetry]
name = "fastapi-msa-project"
version = "0.1.0"
description = "fastapi-msa-toyproject"
authors = ["HjJeon <hope2114.jsj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
